<resources>
    <string name="app_name">Hafta5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gezginin Uygulaması</string>
    <string name="nav_header_subtitle">Bir gezginin Kayıtları</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password_again">Parola Onay</string>
    <string name="eposta">Mail adresinizi giriniz</string>
    <string name="password">Parola giriniz</string>
    <string name="kaydol">Kaydol</string>
    <string name="profil_name">Kübra Durak</string>
    <string name="profil_about">Gezmeyi severim</string>
    <string name="profil_city">Kütahya</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
