<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    tools:context=".fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            >
        <ImageView
            android:id="@+id/user_imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:contentDescription="@string/nav_header_desc"
            android:layout_gravity="center"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/user_image"
            />
        <Button
            android:id="@+id/btn_change_photo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/camera"
            />
        </LinearLayout>


    <TextView
        android:id="@+id/profile_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_name"
        android:paddingTop="30dp"
        android:layout_gravity="center"
        />


    <TextView
        android:id="@+id/profile_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_about"
        android:layout_gravity="center"
        android:paddingTop="10dp"

        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profil_city"
        android:paddingTop="10dp"
        android:layout_gravity="center"

        />

        <ImageView
            android:id="@+id/Id_instagram"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/instagram_ic"/>


    </LinearLayout>
</LinearLayout>